--- a/package.json
+++ b/package.json
@@ -1,13 +1,32 @@
 {
   "name": "bootstrap-invoicing",
-  "version": "0.0.1",
-  "devDependencies": {
-    "grunt": "0.4.1",
-    "grunt-contrib-watch": "0.4.3",
-    "grunt-sass": "0.6.1",
-    "grunt-contrib-compass": "~0.7.1"
+  "version": "0.0.0",
+  "private": true,
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "grunt-contrib-sass": "~0.7.0"
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Wolfs-Little-Store/ticketmatic-apps-prototype.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Wolfs-Little-Store/ticketmatic-apps-prototype/issues"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-webfont": "~0.2.0",
+    "grunt-jekyll": "~0.4.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-compass": "~0.7.0",
+    "connect-livereload": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-open": "~0.2.2",
+    "grunt-contrib-sass": "~0.6.0"
   }
 }
