--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "jquery.cookie": "~1.3.1",
     "jquery.extendedinput.js": "latest",
     "bootstrapx-clickover": "latest",
-    "bootstrap-sass": "git://github.com/twbs/bootstrap-sass.git#v3.0.3-0"
+    "bootstrap-sass": "git://github.com/twbs/bootstrap-sass.git#v3.0.3-0",
+    "bootstrap": "~3.0.3"
   }
 }
