--- a/bower.json
+++ b/bower.json
@@ -2,12 +2,15 @@
   "name": "invoicing-prototype",
   "version": "1.0.0",
   "dependencies": {
-    "modernizr": "~2.6.2",
+    "modernizr": "~2.7.1",
     "jquery": "~2.0.3",
     "jquery.cookie": "~1.3.1",
     "jquery.extendedinput.js": "latest",
     "bootstrapx-clickover": "latest",
     "bootstrap-sass": "git://github.com/twbs/bootstrap-sass.git#v3.0.3-0",
     "bootstrap": "~3.0.3"
+  },
+  "resolutions": {
+    "modernizr": "~2.7.1"
   }
 }
