--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "jquery.cookie": "~1.3.1",
     "jquery.extendedinput.js": "latest",
     "bootstrapx-clickover": "latest",
-    "bootstrap-sass": "git://github.com/twbs/bootstrap-sass.git#v3.0.3-0"
+    "bootstrap-sass": "git://github.com/twbs/bootstrap-sass.git#v3.0.3-0",
+    "state-loader": "*"
   },
   "devDependencies": {
     "nvd3": "~1.1.15-beta",
