--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-open": "~0.2.2",
-    "grunt-contrib-sass": "~0.6.0"
+    "grunt-contrib-sass": "~0.6.0",
+    "grunt-grunticon": "^1.0.0"
   }
 }
