--- a/bower.json
+++ b/bower.json
@@ -5,13 +5,15 @@
     "modernizr": "~2.7.1",
     "jquery": "~2.0.3",
     "jquery.cookie": "~1.3.1",
-    "jquery.extendedinput.js": "latest",
-    "bootstrapx-clickover": "latest",
+    "jquery.extendedinput.js": "~2.1.0",
     "bootstrap-sass": "git://github.com/twbs/bootstrap-sass.git#v3.0.3-0",
     "state-loader": "*"
   },
   "devDependencies": {
     "nvd3": "~1.1.15-beta",
     "d3": "~3.4.3"
+  },
+  "resolutions": {
+    "d3": "~3.3.13"
   }
 }
