--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,7 @@
     "jquery": "~2.0.3",
     "jquery.cookie": "~1.3.1",
     "jquery.extendedinput.js": "~2.1.0",
-    "bootstrap-sass": "git://github.com/twbs/bootstrap-sass.git#v3.0.3-0",
-    "state-loader": "*"
+    "bootstrap-sass": "git://github.com/twbs/bootstrap-sass.git#v3.0.3-0"
   },
   "devDependencies": {
     "nvd3": "~1.1.15-beta",
